--- a/submissions/kalash14/html5-form/scss/_buttons.scss
+++ b/submissions/kalash14/html5-form/scss/_buttons.scss
@@ -12,7 +12,9 @@
     text-align: center;
     letter-spacing: 0.5px;
     @include transition(opacity);
-    &:hover {
+    &:hover,
+    &:focus,
+    &:active {
         opacity: 0.8;
     }
     &:-moz-focusring {
@@ -25,8 +27,10 @@
 
 .standard-button-blue {
     background-color: $blueColor;
-    color: #fff;
     border: 1px solid #54aca9;
+    span {
+        color: #fff;
+    }
 }
 
 .standard-button-back,
@@ -73,7 +77,9 @@
     background-repeat: no-repeat;
     background-size: 1em;
     background-position: 36px center;
-    &:hover {
+    &:hover,
+    &:focus,
+    &:active {
         opacity: 0.8;
     }
 }
@@ -84,7 +90,9 @@
     background: url("#{$imagePath}/waste-bin.svg") center no-repeat;
     border: none;
     @include transition(opacity);
-    &:hover {
+    &:hover,
+    &:focus,
+    &:active {
         opacity: 0.8;
     }
 }
