--- a/submissions/nazmariam/html-form/_media.scss
+++ b/submissions/nazmariam/html-form/_media.scss
@@ -1,4 +1,10 @@
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 1200px) {
+  .type-button{
+    width: 250px;
+  }
+}
+
+@media only screen and (max-width: 1024px) {
 
   .form-container {
     max-width: 100vw;
@@ -10,6 +16,9 @@
   .form-header{
     flex-direction: column;
   }
+  .order{
+    margin: 0 8px;
+  }
   .order-info {
     flex: 0 0 100%;
   }
@@ -18,8 +27,17 @@
     justify-content: center;
     padding: 16px;
   }
+  .order-item{
+    margin: 0 32px;
+  }
+  .your-order{
+    text-align: center;
+    margin: 1em auto;
+    width: 100px;
+  }
   .order-list{
     font-size: 14px;
+    justify-content: center;
   }
   .buttons {
     flex-direction: column;
@@ -30,11 +48,13 @@
     box-sizing: border-box;
     text-align: center;
   }
-  .help-title::before {
-    left: 50px;
+  .help-title{
+    width: 140px;
+    margin: 1em auto;
   }
   .main-title{
-    margin: 0;
+    margin: 32px auto;
+    text-align: center;
   }
   .first-area .container{
     flex-direction: column;
@@ -45,8 +65,12 @@
     margin: 16px 0;
   }
   .type-button{
-    padding: 45px 70px;
-    min-width: 140px;
+    padding: 32px 60px;
+    width: 250px;
+  }
+  .type-button:hover,
+  .inp-type:checked ~ .type-button{
+    padding: 25px 53px;
   }
   .type-img{
     width: 64px;
@@ -101,14 +125,10 @@
   .second-area {
     margin: 24px 0;
   }
-  .from-lang, .to-lang {
-    margin: 0 0 8px;
-  }
   .to-lang .list-header {
     padding-left: 0
   }
   .sel-but{
-    margin: 8px 0;
     display: inline-block;
   }
   .second-lang{
@@ -133,14 +153,29 @@
   .fourth-area .container {
     padding: 8px 64px;
   }
+  .fourth-fieldset{
+    width: 30%;
+    margin: auto;
+  }
   .fifth-area {
     max-width: 100%;
+  }
+  .username,
+  .email-address,
+  .users-password{
+    margin: 0 auto 24px;
+    display: block;
+    width: 300px;
   }
   .sixth-area .container{
     padding: 16px;
   }
   .timeline-info{
     margin: 32px 16px;
+  }
+  .payment-fieldset{
+    width: 30%;
+    margin: auto;
   }
   .payment-method .container{
     flex-direction: column;
@@ -161,15 +196,113 @@
   .order{
     margin: 16px 24px;
   }
+  .card-label{
+    width: 300px;
+  }
+  .code-label{
+    width: 200px;
+  }
+  .card-data .container{
+    display: block;
+    text-align: center;
+  }
+  .payment-card{
+    display: block;
+    text-align: center;
+    margin: 0 auto 16px;
+    width: 300px;
+  }
+  .card-date{
+    display: inline-block;
+    width: 200px;
+    margin-right: 13px;
+  }
+  .card-code{
+    width: 80px;
+    display: inline-block;
+  }
+  .date-label,
+  .code-label,
+  .card-label{
+    width: 100%;
+  }
 }
-
+@media only screen and (max-width: 768px){
+  .add, .from-lang,
+  .first-lang-block,
+  .second-lang-block{
+    display: block;
+    text-align: center;
+    margin: auto;
+  }
+  .from-lang .list-header,
+  .to-lang .list-header{
+    width: 35px;
+  }
+  .second-lang .sel-but{
+    margin-left: 23px;
+  }
+  .order-list{
+    flex-wrap: wrap;
+  }
+  .order-item {
+    margin: 0 16px;
+  }
+}
+@media only screen and (max-width: 520px) {
+  .header-container {
+    justify-content: center;
+    padding: 16px;
+    .form-button{
+      margin: 0 auto 4px;
+    }
+  }
+  .accept .process-order-buttons{
+    flex-wrap: wrap;
+  }
+  .third-area .container {
+    padding: 16px 4px;
+  }
+  .second-lang {
+    margin: 0;
+  }
+  .second-lang-block {
+    flex-direction: row-reverse;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  .fourth-area .container {
+    padding: 8px 16px;
+  }
+  .signin {
+    margin: 8px 0 16px;
+  }
+  .sixth-area .container {
+    padding: 4px;
+  }
+  .username, .email-address, .users-password {
+    margin: 4px;
+  }
+  .title-number {
+    padding: 5px 12px;
+  }
+  .main-title {
+    margin: 32px 4px;
+  }
+  .add, .from-lang, .first-lang-block, .second-lang-block {
+    display: flex;
+  }
+  .second-lang .sel-but {
+    margin-left: 8px;
+  }
+}
 @media (min-width: 768px) {
 
   .form-container {
     max-width: 100%;
   }
 }
-
 @media (min-width: 992px) {
   .form-container {
     max-width: 960px;
