--- a/submissions/alexdefender/html5-order-form/css/upload.css
+++ b/submissions/alexdefender/html5-order-form/css/upload.css
@@ -1,6 +1,5 @@
 .upload {
-  margin-top: 50px;
-  margin-left: 93px;
+  margin: 50px 20px 0 93px;
 }
 
 .upload__header {
@@ -54,7 +53,7 @@
   padding: 25px;
   border: 1px solid #e8eaed;
   border-radius: 5px;
-  max-width: 800px;
+  max-width: 815px;
   min-width: 400px;
 }
 
