--- a/submissions/justdevway/html5-form/src/scss/components/login.scss
+++ b/submissions/justdevway/html5-form/src/scss/components/login.scss
@@ -73,6 +73,10 @@
 
     &--code {
       width: 100px;
+
+      @media only screen and (max-width: $mobile) {
+        width: 100%;
+      }
     }
 
     &__name {
