--- a/submissions/justdevway/html5-form/src/scss/layout/form.scss
+++ b/submissions/justdevway/html5-form/src/scss/layout/form.scss
@@ -4,8 +4,8 @@ $number-size: 35px;
   background: #fff;
 
   &__header {
-    border: 1px solid var(--lightgray);
-    border-radius: 2px;
+    //border: 1px solid var(--lightgray);
+    //border-radius: 2px;
   }
 
   &__body {
@@ -30,7 +30,7 @@ $number-size: 35px;
     }
 
     @media only screen and (max-width: $mobile) {
-      padding: 15px 0;
+      padding: 30px 0 15px;
     }
 
     &__item {
@@ -265,6 +265,10 @@ $number-size: 35px;
       float: right;
       display: flex;
       align-items: center;
+
+      @media only screen and (max-width: $tablet) {
+        padding: 0 15px;
+      }
 
       @media only screen and (max-width: $mobile) {
         float: none;
