repair hidden class

--- a/submissions/Aldegid/google-style-popup/app/sass/main.sass
+++ b/submissions/Aldegid/google-style-popup/app/sass/main.sass
@@ -48,6 +48,7 @@ body
 		background-image: url(../img/photo.jpg)
 
 .hidden-input
+	position: absolute
 	overflow: hidden
 	clip: rect(0 0 0 0)
 	height: 1px
